[package]
name = "rust-blockchain"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto = "0.2.36"
chrono = "0.4.19"
openssl = "0.10.35"
rand_core = "0.6.3"
sled = "0.34.6"
serde_json = "1.0.66"
serde = { version = "1.0.127", features = ["derive"] }