[package]
name = "blockchain"
version = "0.1.0"
edition = "2018"

[dependencies]
rust-crypto = "0.2.36"
chrono = "0.4.19"
openssl = "0.10.35"
rand_core = "0.6.3"
serde_json = "1.0.66"
serde = { version = "1.0.127", features = ["derive"] }
log = "0.4.14"
tokio = { version = "1.11.0", features = ["rt-multi-thread", "macros"]}
mongodb = "2.0.0"
futures-util = "0.3.17"