[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
rust-crypto = "0.2.36"
chrono = "0.4.19"
serde_json = "1.0.66"
serde = { version = "1.0.127", features = ["derive"] }
tracing = "0.1"
tokio = { version = "1.11.0", features = ["rt-multi-thread", "macros"]}
mongodb = "2.0.0"
futures-util = "0.3.17"
jsonrpc_client = { version = "*", features = ["reqwest", "surf", "isahc", "macros"] }
reqwest = "0.11.4"
jsonrpc-derive = "18.0.0"
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-client-transports = "18.0.0"
k256 = { version = "0.9.6", features = ["zeroize", "keccak256"] }
elliptic-curve = "0.11.1"
rand_core = { version = "0.6.3", features = ["getrandom"]}

[dev-dependencies]
tokio-test = "0.4.2"