[package]
name = "client"
version = "0.1.0"
edition = "2018"

[dependencies]
jsonrpc_client = { version = "*", features = ["reqwest", "surf", "isahc", "macros"] }
reqwest = "0.11.4"
tokio = { version = "1.9.0", features = ["rt-multi-thread", "macros"]}
jsonrpc-derive = "18.0.0"
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-client-transports = "18.0.0"