[package]
name = "consensus"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.9.0", features = ["rt-multi-thread", "macros"]}
futures = "0.3.16"
rust-crypto = "0.2.36"

[dev-dependencies]
