[package]
name = "explorer"
version = "0.1.0"
edition = "2018"

[dependencies]
tui = { version = "0.16.0", default-features = false, features = ["crossterm"]}
crossterm = "0.21.0"
client = { path = "../client"}
node = { path = "../node"}
tokio = { version = "1.9.0", features = ["full"]}
blockchain = { path = "../blockchain"}
argh = "0.1.5"
futures = "0.3.16"