[package]
name = "explorer"
version = "0.1.0"
edition = "2021"

[dependencies]
tui = { version = "0.16.0", default-features = false, features = ["crossterm"]}
crossterm = "0.21.0"
client = { path = "../client"}
node = { path = "../node"}
tokio = { version = "1.11.0", features = ["full"]}
blockchain = { path = "../blockchain"}
argh = "0.1.5"
futures = "0.3.16"
serde_json = "1.0.66"