[package]
name = "node"
version = "0.1.0"
edition = "2018"

[dependencies]
blockchain = { path = "../blockchain"}
serde_derive = "1.0.126"
serde = { version = "1.0.127", features = ["derive"] }
jsonrpc-http-server = "18.0.0"
futures = "0.3.16"
jsonrpc-derive = "18.0.0"
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
chrono = "0.4.19"
openssl = "0.10.35"
rust-crypto = "0.2.36"
consensus = { path = "../consensus"}
reqwest = {version="0.11.4", features = ["json"] }
client = { path = "../client"}
log = "0.4.14"
tokio = { version = "1.9.0", features = ["full"]}

[dev-dependencies]
actix-rt = "2.2.0"
simple_logger = "1.13.0"
discovery_server = { path = "../discovery_server" }
